--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/sainRaghuveer/WChatB#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "openai": "^3.2.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.19.5"
